--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -412,27 +412,39 @@ p {
 
 .header {
   padding: 3rem 0;
-  display: flex;
-  align-items: center;
-  gap: 8rem;
+}
+.header::after {
+  content: "";
+  display: block;
+  clear: both;
 }
 .header__logo {
+  width: 10%;
   width: 3rem;
 }
 
 .nav {
-  flex: 1;
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  gap: 10rem;
+  float: right;
+  width: 90%;
+}
+.nav::after {
+  content: "";
+  display: block;
+  clear: both;
 }
 .nav__links {
+  float: right;
+  width: 70%;
   display: flex;
   align-items: center;
   gap: 3rem;
 }
+.nav__links a {
+  padding: 1rem 0;
+}
 .nav__buttons {
+  float: right;
+  width: 30%;
   display: flex;
   gap: 2rem;
 }
@@ -511,29 +523,34 @@ p {
 
 .footer {
   position: relative;
-  margin-top: 3rem;
 }
-.footer__contenido p {
-  max-width: 25%;
+.footer__contenido {
+  padding-top: 3rem;
+  width: 23%;
 }
 .footer__imagen {
-  width: 30%;
+  width: 35%;
   float: right;
 }
 .footer__imagen img {
   object-fit: cover;
 }
 
-.main {
-  display: grid;
-  gap: 8rem;
-  grid-template-columns: 3fr 1fr;
+.main::after {
+  content: "";
+  display: block;
+  clear: both;
+}
+.main__imagen {
+  width: 70%;
 }
 .main__imagen img {
-  width: 100%;
+  width: 93%;
   object-fit: cover;
 }
 .main__contenido {
+  width: 30%;
+  float: right;
   margin-top: 3rem;
 }
 
