--- a/assets/scss/abstracts/_mixins.scss
+++ b/assets/scss/abstracts/_mixins.scss
@@ -35,3 +35,12 @@
     gap: $espaciado;
     grid-template-columns: $columnas;
 }
+
+@mixin clearFloat {
+    &::after {
+        content: '';
+        display: block;
+        clear: both;
+    }
+
+}
