--- a/assets/scss/layout/_nav.scss
+++ b/assets/scss/layout/_nav.scss
@@ -1,17 +1,26 @@
+@use "../abstracts/mixins" as m;
+
 .nav {
-    flex: 1;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    gap: 10rem;
+    float: right;
+    width: 90%;
+    
+    @include m.clearFloat;
 
     &__links {
+        float: right;
+        width: 70%;
         display: flex;
         align-items: center;
         gap: 3rem;
+
+        a {
+            padding: 1rem 0;
+        }
     }
 
     &__buttons {
+        float: right;
+        width: 30%;
         display: flex;
         gap: 2rem;
     }
