--- a/assets/scss/layout/_contacto.scss
+++ b/assets/scss/layout/_contacto.scss
@@ -2,15 +2,24 @@
 
 .contacto {
     position: absolute;
-    right: 0;
-    left: 0;
-    top: 40%;
+    top: 55.5%;
+    height: 20%;
+    left: 28%;
+    width: 50%;
+    // background-color: green;
 
 
     &__boxes {
-        padding: 2rem;
-        margin: 0 auto;
-        width: 40%;
+        position: absolute;
+        left: 50%;
+        margin-left: -22.5rem;
+        top: 50%;
+        margin-top: -7.5rem;
+        z-index: 2;
+
+        padding: 2rem 5rem;
+        width: 45rem;
+        height: 15rem;
         background-color: v.$white;
         text-align: center;
         display: flex;
@@ -20,6 +29,7 @@
 
         h2  {
             font-size: 4rem;
+            margin: 0;
         }
     }
 
@@ -28,13 +38,15 @@
 
 
         &--mapa {
-            width: 30%;
-            left: 27%;
-            bottom: -140%;
+            width: 40rem;
+            left: 24%;
+            top: 100%;
         }
+
         &--cafe {
             z-index: 1;
-            right: 27%;
+            left: 70%;
+            top: 89%;
             img {
                 height: 15rem;
                 width: 10rem;
@@ -45,17 +57,15 @@
 }
 
 .caja {
-    margin: 0 auto;
     position: absolute;
-    right: 0;
-    
+
     &--roja {
         height: 15rem;
         width: 15rem;
         background-color: v.$flame;
         z-index: 1;
-        left: 50%;
-        bottom: 20%;
+        left: 71%;
+        z-index: 2;
 
         display: flex;
         justify-content: center;
@@ -70,13 +80,17 @@
         height: 15rem;
         width: 15rem;
         background-color: v.$buff;
-        left: 53%;
-        bottom: 0;
+        left: 73.5%;
+        top: 50%;
+        margin-top: -7.5rem;
+        z-index: 1;
     }
     &--celeste {
         height: 20rem;
-        width: 50%;
+        width: 60rem;
         background-color: v.$blueDeFrance;
-        left: 10%;
+        top: 88%;
+        left: 50%;
+        margin-left: -22.5rem;
     }
 }
