--- a/assets/scss/base/_reset.scss
+++ b/assets/scss/base/_reset.scss
@@ -46,7 +46,7 @@ p {
     margin-top: 0;
 }
 .contenedor {
-    max-width: 128rem;
+    // max-width: 128rem;
     width: 95%;
     margin: 0 auto;
 }
