--- a/assets/scss/layout/_contacto.scss
+++ b/assets/scss/layout/_contacto.scss
@@ -4,7 +4,7 @@
     position: absolute;
     top: 55.5%;
     height: 20%;
-    left: 28%;
+    left: 43%;
     width: 50%;
     // background-color: green;
 
@@ -92,5 +92,6 @@
         top: 88%;
         left: 50%;
         margin-left: -22.5rem;
+        z-index: -1;
     }
 }
