--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -363,7 +363,6 @@ p {
 }
 
 .contenedor {
-  max-width: 128rem;
   width: 95%;
   margin: 0 auto;
 }
@@ -434,7 +433,7 @@ p {
 }
 .nav__links {
   float: right;
-  width: 70%;
+  width: 80%;
   display: flex;
   align-items: center;
   gap: 3rem;
@@ -444,7 +443,7 @@ p {
 }
 .nav__buttons {
   float: right;
-  width: 30%;
+  width: 20%;
   display: flex;
   gap: 2rem;
 }
@@ -453,7 +452,7 @@ p {
   position: absolute;
   top: 55.5%;
   height: 20%;
-  left: 28%;
+  left: 43%;
   width: 50%;
 }
 .contacto__boxes {
@@ -530,22 +529,28 @@ p {
   top: 88%;
   left: 50%;
   margin-left: -22.5rem;
+  z-index: -1;
 }
 
 .footer {
-  position: relative;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
 }
 .footer__contenido {
   padding-top: 3rem;
+}
+.footer__contenido p {
   width: 23%;
+  margin: 0;
 }
 .footer__imagen {
   overflow: hidden;
-  height: 25rem;
-  width: 35%;
-  float: right;
+  width: 20%;
+  height: 26rem;
 }
 .footer__imagen img {
+  height: 100%;
   object-fit: cover;
 }
 
@@ -555,14 +560,16 @@ p {
   clear: both;
 }
 .main__imagen {
-  width: 70%;
+  width: 80%;
 }
 .main__imagen img {
-  width: 93%;
+  width: 100%;
+  height: 60rem;
   object-fit: cover;
 }
 .main__contenido {
-  width: 30%;
+  width: 20%;
+  text-align: center;
   float: right;
   margin-top: 3rem;
 }
