--- a/assets/scss/layout/_footer.scss
+++ b/assets/scss/layout/_footer.scss
@@ -2,19 +2,24 @@
 @use "../abstracts/mixins" as m;
 
 .footer {
-    position: relative;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
 
     &__contenido {
         padding-top: v.$separacion;
-        width: 23%;
+        p {
+            width: 23%;
+            margin: 0;
+        }
     }
 
     &__imagen {
         overflow: hidden;
-        height: 25rem;
-        width: 35%;
-        float: right;
+        width: 20%;
+        height: 26rem;
         img {
+            height: 100%;
             object-fit: cover;
         }
     }
