--- a/assets/scss/abstracts/_variables.scss
+++ b/assets/scss/abstracts/_variables.scss
@@ -1,6 +1,6 @@
 // Fuentes
-$fuentePrincipal: "PT Mono", sans-serif;
-$fuenteSecundaria: "Roboto", sans-serif;
+// $fuentePrincipal: "PT Mono", sans-serif;
+// $fuenteSecundaria: "Roboto", sans-serif;
 
 // Tamaño de Media Queries
 $telefono: 480px;
